// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with minimal props 1`] = `
<div>
  <Styles />
  <div
    id="datepicker"
  >
    <div
      style={
        Object {
          "border": "1px solid #ddd",
          "borderRadius": "4px",
          "left": 0,
          "margin": "0 auto",
          "maxWidth": "300px",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 999,
        }
      }
    >
      <component
        locale="en"
        localeUtils={
          Object {
            "formatDay": [Function],
            "formatMonthTitle": [Function],
            "formatWeekdayLong": [Function],
            "formatWeekdayShort": [Function],
            "getFirstDayOfWeek": [Function],
          }
        }
        modifiers={
          Object {
            "disabled": [Function],
            "selected": [Function],
          }
        }
        onDayClick={[Function]}
      />
      <div
        className="background--light-secondary soft text-center"
      >
        <button
          className="btn flush btn--small"
          onClick={[Function]}
        >
          Done
        </button>
      </div>
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 998,
        }
      }
    />
  </div>
</div>
`;

exports[`test should render with minimal props 1`] = `
<div>
  <Styles />
  <div
    id="datepicker">
    <div
      style={
        Object {
          "border": "1px solid #ddd",
          "borderRadius": "4px",
          "left": 0,
          "margin": "0 auto",
          "maxWidth": "300px",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 999,
        }
      }>
      <component
        locale="en"
        localeUtils={
          Object {
            "formatDay": [Function],
            "formatMonthTitle": [Function],
            "formatWeekdayLong": [Function],
            "formatWeekdayShort": [Function],
            "getFirstDayOfWeek": [Function],
          }
        }
        modifiers={
          Object {
            "disabled": [Function],
            "selected": [Function],
          }
        }
        onDayClick={[Function]} />
      <div
        className="background--light-secondary soft text-center">
        <button
          className="btn flush btn--small"
          onClick={[Function]}>
          Done
        </button>
      </div>
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 998,
        }
      } />
  </div>
</div>
`;
